Fixed background image not showing

--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ body {
 .masthead {
     width: 100%;
     height: 100vh;
-    background-image: url("/img/your_verse_hero.jpg");
+    background-image: url("https://github.com/xwaxes01/BackgroundsAndGradients/blob/main/img/your_verse_hero.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
